@@ -4,6 +4,8 @@
    /usr/include/crypto.  Hint from djm@.
  - (tim) [kex.c myproposal.h md-sha256.c openbsd-compat/sha2.c,h]
    Disable sha256 when openssl < 0.9.7. Patch from djm@.
+ - (djm) [kex.c] Slightly more clean deactivation of dhgex-sha256 on old
+   OpenSSL; ok tim
 
 20060315
  - (djm) OpenBSD CVS Sync:
@@ -4180,4 +4182,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4227 2006/03/16 04:17:05 tim Exp $
+$Id: ChangeLog,v 1.4228 2006/03/16 07:22:18 djm Exp $
